5. bug [tela comprar] - texto da tabela não estava centralizado: chamei todos os td e coloquei text-align: center

--- a/semana2/bugfixes/dia4-aula8/index.css
+++ b/semana2/bugfixes/dia4-aula8/index.css
@@ -92,6 +92,9 @@ div img {
     font-size: 60px;
 }
 
+td {
+    text-align: center;
+}
 
 /**
   *
